--- a/_posts/2022-03-31-test-post.md
+++ b/_posts/2022-03-31-test-post.md
@@ -3,3 +3,39 @@ layout: post
 title: My First Post!! 
 ---
 I'm an awesome PIC16B student and I am running Jekyll!
+<br>
+I am also learning about markdown!
+<br>
+I can do lists!
+1. one
+2. two
+3. three
+
+And math!
+<br>
+$$\oint_V f(s) \,ds$$
+<br>
+And I can insert python-styled code!
+```py
+def f(x):
+    """
+    A cool function that multiples an input x by 2. 
+    """
+    return 2*x
+```
+<br>
+I can also insert images!
+<br>
+![Sponge](https://upload.wikimedia.org/wikipedia/en/thumb/3/3b/SpongeBob_SquarePants_character.svg/640px-SpongeBob_SquarePants_character.svg.png)
+<br>
+And plots!
+<br>
+```py
+import numpy as np
+from matplotlib import pyplot as plt
+x = np.linspace(0, 2*np.pi, 1001)
+y = np.sin(x)
+plt.plot(x, y)
+```
+<br>
+![image-example.png](/images/image-example.png)
